--- a/index.html
+++ b/index.html
@@ -7,25 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hi, this is my first website</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-      repudiandae voluptates laborum!
-    </p>
-    <ul>
-      <li>lorem</li>
-      <li>lorem</li>
-      <li>lorem</li>
-      <li>lorem</li>
-      <li>lorem</li>
-    </ul>
-    <h1>Following links will let you see my posts!</h1>
-    <ol>
-      <li><a href="videos.html">Videos</a></li>
-      <li><a href="audios.html">Audios</a></li>
-      <li><a href="images.html">Images</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="Why.html">Why I choose this job?</a></li>
-    </ol>
+    <h1>hello</h1>
+    <script src="main.js"></script>
   </body>
 </html>
